fix align

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ footer .socials {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #hero h1 {
